Fix spacing and styling

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 .column {
 	float: left;
 	width: 30%;
@@ -71,7 +69,7 @@ body {
 }
 
 p, ul, li {
-	line-height: 20px;
+	line-height: 1.6;
 }
 
 #nameplate h5 {
@@ -116,10 +114,11 @@ nav a {
 }
 
 #articles {
-	padding-left: 10px;
+	padding-left: 20px;
 	padding: 5px;
 	/*text-align: center;*/
 	margin: 5px;
+	/*margin-left: 20px;*/
 }
 
 ul {
@@ -147,6 +146,7 @@ ul {
 li a {
 	text-decoration: none;
 	font-weight: bold;
+	border-radius: 2px;
 }
 
 li a:hover {
@@ -199,4 +199,9 @@ p, h2, h3 {
 	display: block;
 	margin: auto 0;
 	text-align: center;
+}
+
+#articles-div {
+	padding-left: 20px;
+	margin-left: 20px;
 }
